# Chronos-backend

./: .editorconfig  .gitignore  .pre-commit-config.yaml  DockerFile  README.md  erd-full.dot  erd.dot  manage.py  pyproject.toml  record.txt  requirements.txt  run_asgi.py
.github/workflows/: deploy_prod.yml  deploy_test.yml
.github/workflows_archive/: deploy_dev.yml  deploy_rel.yml
backend/chatbot/: admin.py  apis.py  apps.py  models.py  schemas.py  signals.py  tasks.py
backend/chatbot/migrations/: 0001_initial.py  0002_conversation_name.py  0003_conversation_state.py  0004_message_chatbot_mes_convers_a0cf0e_idx_and_more.py  0005_conversation_assistant_id.py
backend/config/: api.py  auth.py  celery.py
backend/config/settings/: base.py  docker.py  local.py
backend/core/: adapters.py  apis.py  authentication.py  models.py  schemas.py  tasks.py  utils.py
backend/core/migrations/: 0002_user_last_login_ip_user_last_login_time.py
backend/pveec/: __init__.py  admin.py  apis.py  apps.py  models.py  schemas.py  tasks.py  utils.py
backend/pveec/migrations/: 0001_initial.py  0002_categorymodel_fileuploadlogmodel_category_and_more.py
config/: api.py  asgi.py  auth.py  celery.py  schemas.py  urls.py  wsgi.py
config/settings/: base.py  docker.py
docker-compose/: docker-compose-dev.yml  docker-compose-local-DB.yml  docker-compose-prod-flower.yml  docker-compose-prod-worker.yml  docker-compose-rel-flower.yml  docker-compose-rel-worker.yml  docker-compose-test-flower.yml  docker-compose-test-worker.yml
docker-entrypoint/: celery-entrypoint.sh  django-entrypoint.sh  flower-entrypoint.sh
dotenv/: .env.example  .env.local
